--- a/app/views/company/_document_template_form.html.haml
+++ b/app/views/company/_document_template_form.html.haml
@@ -7,7 +7,7 @@
   -f.field :document_template, :to_archive
   -f.field :document_template, :default
   -f.field :document_template, :active
-  -f.field :document_template, :language_id, :choices=>@current_company.languages.collect{|x| [x.native_name, x.id]}
+  -f.field :document_template, :language_id, :choices=>{:reflection=>:languages}
   -f.field :document_template, :country, :choices=>countries
   -f.field :document_template, :filename
   -f.field :document_template, :source, :field=>:textarea, :options=>{:cols=>80, :rows=>30}, :class=>:code
