--- a/app/views/management/_shelf_form.html.haml
+++ b/app/views/management/_shelf_form.html.haml
@@ -8,5 +8,5 @@
   - f.title :catalog
   - f.field :shelf, :catalog_name
   - f.field :shelf, :catalog_description, :field=>:textarea
-=observe_field("shelf_name", :frequency =>0.25, :function => "var cn = $('shelf_catalog_name'); cn.value = value;")
+=observe_field("shelf_name", :frequency =>0.25, :function => "$('shelf_catalog_name').value = value;")
 
