--- a/app/views/shared/_menu.html.haml
+++ b/app/views/shared/_menu.html.haml
@@ -1,3 +1,5 @@
+-#.nav
+-#  %h1.title=::I18n.t("controllers.#{controller.controller_name}.title")
 .menu.indicator
   %ul
     =li_link_to tg('indicator'), :controller=>self.controller.controller_name
