--- a/app/views/company/_user_form.html.haml
+++ b/app/views/company/_user_form.html.haml
@@ -4,47 +4,35 @@
   -f.field :user, :last_name
   -f.field :user, :first_name
   -f.field :user, :email
-  -f.field :user, :language_id, :choices=>@current_company.languages.collect{|x| [x.native_name, x.id]}
+  -f.field :user, :language_id, :choices=>{:reflection=>:languages}
   -f.field :user, :name
   -f.field :user, :password
   -f.field :user, :password_confirmation
-  -f.field :user, :admin
-  -f.field :user, :employed
+  -f.field :user, :admin, :onchange=>"displayRights()"
+  -f.field :user, :employed, :onchange=>"displayEmployee()"
 
 #employee{:style=>"display: #{@user.employed ? 'block' : 'none'}"}
   =render :partial=>"resources/employee_form", :locals=>{:create_user=>true}
 
 -user_role_id = nil 
-=formalize(:id=>:show_rights) do |f|
-  -f.title :rights
-  -user_role_id = f.field :user, :role_id, :choices=>{:reflection=>:roles}, :new=>{:action=>:role_create}
-  -#f.field :user, :reduction_percent
-  -#f.field :user, :free_price
-  -#f.field :user, :credits
+#rights-conf
+  =formalize(:id=>:show_rights) do |f|
+    -f.title :rights
+    -user_role_id = f.field :user, :role_id, :choices=>{:reflection=>:roles}, :new=>{:action=>:role_create}
+    -#f.field :user, :reduction_percent
+    -#f.field :user, :free_price
+    -#f.field :user, :credits
 
-#rights=render :partial=>"rights_form"
+  #rights=render :partial=>"rights_form"
 
 :javascript
-  function display_rights(){
-    if($('user_admin').checked){
-      $('show_rights').hide();
-      $('rights').hide();}
-    else{
-      $('show_rights').show();
-      $('rights').show();}
+  window.displayRights = function(){ 
+    toggleElement('rights-conf', !$('user_admin').checked); 
   }
-  
-  function toggle_employee() {
-    if($('user_employed').checked) {
-      $('employee').slideDown();
-    } else {
-      $('employee').slideUp();
-    }
-    return false;
+  window.displayEmployee = function() { 
+    toggleElement('employee', $('user_employed').checked); 
   }
-  display_rights();
-  create_employee();
+  displayRights();
+  displayEmployee();
 
-=observe_field("user_employed", :frequency=>0.25, :function=>"toggle_employee();" )
-=observe_field("user_admin", :frequency=>0.25, :function=>"display_rights();" )
-=observe_field(user_role_id, :url=>{:action=>:user_create}, :update=>:rights, :frequency => 0.25 , :with=>"user_role_id")
+=observe_field(user_role_id, :url=>{:action=>:user_create, :mode=>:rights}, :update=>:rights, :frequency => 0.25 , :with=>"user_role_id")
