--- a/app/views/management/_embankment_form.html.haml
+++ b/app/views/management/_embankment_form.html.haml
@@ -1,8 +1,8 @@
 =formalize do |f|
   - f.error :embankment
   - f.title :infos
-  - f.field :embankment, :bank_account_id, :choices=>@current_company.bank_accounts.find_all_by_entity_id(@current_company.entity_id).collect{|x| [x.name, x.id]}, :new=>{:controller=>:accountancy, :action=>:bank_account_create}
-  - f.field :embankment, :embanker_id, :choices=>@current_company.available_users.collect{|x| [x.label, x.id]}
+  - f.field :embankment, :bank_account_id, :choices=>{:reflection=>:self_bank_accounts}, :new=>{:controller=>:accountancy, :action=>:bank_account_create}
+  - f.field :embankment, :embanker_id, :choices=>{:reflection=>:users}
   - f.field :embankment, :created_on
 
 =hidden_field_tag :mode_id, @embankment.mode_id
