--- a/app/views/management/_payment_form.html.haml
+++ b/app/views/management/_payment_form.html.haml
@@ -3,9 +3,9 @@
   -f.title :title
   -f.field :payment, :amount
   -f.field :payment, :to_bank_on
-  -f.field :payment, :mode_id, :choices=>@current_company.payment_modes.collect{|x| [x.name, x.id ]}, :new=>{:action=>:payment_mode_create}
+  -f.field :payment, :mode_id, :choices=>{:reflection=>:payment_modes}, :new=>{:action=>:payment_mode_create}
   -f.title :check
-  -f.field :payment, :embanker_id, :choices=>@current_company.users.collect{|x| [x.first_name+" "+x.last_name, x.id]}
+  -f.field :payment, :embanker_id, :choices=>{:reflection=>:users}
   -f.field :payment, :paid_on
   -f.field :payment, :check_number
   -f.field :payment, :account_number
