--- a/app/views/management/_payment_mode_form.html.haml
+++ b/app/views/management/_payment_mode_form.html.haml
@@ -1,6 +1,5 @@
 =formalize do |f|
   -f.error :payment_mode
   -f.field :payment_mode, :name
-  -f.field :payment_mode, :account_id, :choices=>:account, :resize=>true
-  -#f.field :payment_mode, :account_id, :choices=>@current_company.accounts.find(:all, :conditions=>{:deleted=>false}, :order=>:number).collect{|x| [x.label, x.id]},:options=>{:include_blank=>true}
-  -f.field :payment_mode, :mode,:field=>:radio, :choices=>PaymentMode.modes
+  -f.field :payment_mode, :account_id, :choices=>:account, :new=>{:controller=>:accountancy, :action=>:account_create}, :resize=>true
+  -f.field :payment_mode, :mode, :field=>:radio, :choices=>PaymentMode.modes
