--- a/app/views/management/_sale_order_form.html.haml
+++ b/app/views/management/_sale_order_form.html.haml
@@ -5,13 +5,13 @@
   - f.title :client
   - f.field :sale_order, :client_id, :choices=>:clients, :new=>{:controller=>:relations, :action=>:entity_create}
   - f.title :conditions
-  - f.field :sale_order, :nature_id, :choices=>@current_company.sale_order_natures.collect{|x| [x.name, x.id]}
-  - f.field :sale_order, :currency_id, :choices=>@current_company.currencies.collect{|c| [c.name, c.id]}
-  - f.field :sale_order, :responsible_id, :choices=>@current_company.employees.find(:all, :order=>:last_name).collect{|x| [x.label, x.id]}, :new=>{:controller=>:resources, :action=>:employee_create}
+  - f.field :sale_order, :nature_id, :choices=>{:reflection=>:sale_order_natures}, :new=>{:action=>:sale_order_nature_create}
+  - f.field :sale_order, :currency_id, :choices=>{:reflection=>:currencies}
+  - f.field :sale_order, :responsible_id, :choices=>{:reflection=>:employees}, :new=>{:controller=>:company, :action=>:user_create, :employed=>1}
   - f.field :sale_order, :contact_id, :choices=>@contacts, :new=>{:controller=>:relations, :action=>:entity_contact_create, :id=>@current_company.entity_id}
   - f.field :sale_order, :delivery_contact_id, :choices=>@contacts, :new=>{:controller=>:relations, :action=>:entity_contact_create, :id=>@current_company.entity_id}
   - f.field :sale_order, :invoice_contact_id, :choices=>@contacts, :new=>{:controller=>:relations, :action=>:entity_contact_create, :id=>@current_company.entity_id}
-  - f.field :sale_order, :transporter_id, :choices=>@current_company.entities.find_all_by_active_and_transporter(true,true).collect{|t| [t.label,t.id]}, :options=>{:include_blank=>"--Aucun--"}
+  - f.field :sale_order, :transporter_id, :choices=>{:reflection=>:transporters, :include_blank=>"--Aucun--"}
   - f.field :sale_order, :comment, :field=>:textarea
   - f.field :sale_order, :letter_format
 =formalize(:id=>:letter_format) do |f|
@@ -22,24 +22,15 @@
   - f.field :sale_order, :conclusion, :field=>:textarea
 
 :javascript
-  function update_contacts(value) {
-    new Ajax.Request('#{url_for(:controller=>:management, :action => :sale_order_contacts)}', {asynchronous:true, evalScripts:true, parameters:'client_id=' + encodeURIComponent(value), onSuccess: function(resp) {
-      $('sale_order_contact_id').update(resp.responseText);
-      $('sale_order_delivery_contact_id').update(resp.responseText); 
-      $('sale_order_invoice_contact_id').update(resp.responseText);  
+  window.update_contacts = function(value) {
+    new Ajax.Request('#{url_for(:controller=>:management, :action => :sale_order_contacts)}', {asynchronous:true, evalScripts:true, parameters:'client_id=' + encodeURIComponent(value), onSuccess: function(response) {
+      $('sale_order_contact_id').update(response.responseText);
+      $('sale_order_delivery_contact_id').update(response.responseText); 
+      $('sale_order_invoice_contact_id').update(response.responseText);  
      }});
-  } 
-  /*update_contacts($('sale_order_client_id').value); */
-
-:javascript
-  function letter_informations(){
-    if($('sale_order_letter_format').checked)
-      $('letter_format').show();
-    else
-      $('letter_format').hide();
-   }
+  }
+  window.letter_informations = function(){ toggleElement('letter_format', $('sale_order_letter_format').checked); }
   letter_informations();
 
 =observe_field "sale_order_client_id", :frequency => 0.25, :function=>"update_contacts(value)"
-
 =observe_field("sale_order_letter_format", :frequency=>0.25, :function=> "letter_informations();")
