--- a/app/views/management/_sale_order_line_form.html.haml
+++ b/app/views/management/_sale_order_line_form.html.haml
@@ -1,11 +1,12 @@
 =sale_steps
 
-= formalize do |f|
+-price_id, location_id = nil, nil
+=formalize do |f|
   -f.error :sale_order_line
   -f.error :subscription
   -f.title :infos
-  -f.field :sale_order_line, :price_id, :choices=>@current_company.available_prices.collect{|x| [x.label, x.id]}, :new=>{:action=>:price_create, :mode=>:sales}
-  -f.field :sale_order_line, :location_id, :choices=>@locations.collect{|x| [x.name, x.id]} if @locations.size > 1
+  -price_id    = f.field :sale_order_line, :price_id, :choices=>{:reflection=>:available_prices}, :new=>{:action=>:price_create, :mode=>:sales}
+  -location_id = f.field :sale_order_line, :location_id, :choices=>{:reflection=>:locations}, :new=>{:action=>:location_create} if @locations.size > 1
   -f.field :sale_order_line, :quantity
   -f.field :sale_order_line, :annotation, :field=>:textarea
 #stocks=#render :partial=>"sale_order_line_stocks"
@@ -17,7 +18,7 @@
   =formalize do |f|
     -f.title :change_price
     -f.field :sale_order_line, :price_amount
-    -f.field :sale_order_line, :tax_id, :choices=>@current_company.taxes.find_all_by_deleted(false).collect{|x| [x.name, x.id]}
+    -f.field :sale_order_line, :tax_id, :choices=>{:reflection=>:taxes}, :new=>{:controller=>:accountancy, :action=>:tax_create}
 
 -if @current_user.can?(:give_discounts_on_sale)
   =formalize do |f|
@@ -25,8 +26,7 @@
     -f.field :sale_order_line, :discount, :size=>5
 
 
-=observe_field("sale_order_line_price_id", :url=>{:action => :subscription_find}, :frequency => 0.25, :with=>"sale_order_line_price_id")
-=#observe_field("sale_order_line_price_id", :url=>{:action => :sale_order_line_stocks}, :frequency => 0.25, :with=>"sale_order_line_price_id") 
-=observe_field("sale_order_line_price_id", :url=>{:action => :sale_order_line_tracking}, :frequency => 0.25, :with=>"sale_order_line_price_id")
+=observe_field(price_id, :url=>{:action => :subscription_find}, :frequency => 0.25, :with=>"sale_order_line_price_id")
+=observe_field(price_id, :url=>{:action => :sale_order_line_tracking}, :frequency => 0.25, :with=>"sale_order_line_price_id")
 -if @current_company.locations.size > 1
-  =observe_field("sale_order_line_location_id", :url=>{:action => :sale_order_line_tracking}, :frequency => 0.25, :with=>"sale_order_line_location_id")
+  =observe_field(location_id, :url=>{:action => :sale_order_line_tracking}, :frequency => 0.25, :with=>"sale_order_line_location_id")
