--- a/app/views/management/_sale_order_nature_form.html.haml
+++ b/app/views/management/_sale_order_nature_form.html.haml
@@ -5,8 +5,8 @@
   - f.field :sale_order_nature, :comment, :field=>:textarea
   - f.title :conditions
   - f.field :sale_order_nature, :payment_type, :choices=>SaleOrderNature.payment_types
-  - f.field :sale_order_nature, :expiration_id, :choices=>@current_company.delays.collect{|x| [x.name, x.id]}
-  - f.field :sale_order_nature, :payment_delay_id, :choices=>@current_company.delays.collect{|x| [x.name, x.id]}
+  - f.field :sale_order_nature, :expiration_id, :choices=>{:reflection=>:delays}, :new=>{:action=>:delay_create}
+  - f.field :sale_order_nature, :payment_delay_id, :choices=>{:reflection=>:delays}, :new=>{:action=>:delay_create}
   - f.field :sale_order_nature, :downpayment
   - f.field :sale_order_nature, :downpayment_minimum
   - f.field :sale_order_nature, :downpayment_rate
