--- a/app/views/management/_stock_move_form.html.haml
+++ b/app/views/management/_stock_move_form.html.haml
@@ -1,15 +1,15 @@
 =formalize do |f|
-  - f.error :stock_move
-  - f.title :description
-  - f.field :stock_move, :name
-  - f.field :stock_move, :comment, :field=>:textarea
-  - f.title :nature
-  - f.field :stock_move, :virtual
-  - f.field :stock_move, :input
-  - f.field :stock_move, :location_id, :choices=>@current_company.locations.find(:all, :order=>:name).collect{|x| [x.name, x.id]}
-  - f.field :stock_move, :planned_on
-  - f.field :stock_move, :moved_on
-  - f.field :stock_move, :product_id, :choices=>@current_company.products.find(:all, :order=>:name).collect{|x| [tc('product', :product=>x.name, :unit=>x.unit.label), x.id]}, :new=>{:action=>:product_create}
-  - f.field :stock_move, :quantity
-  -#f.field :stock_move, :unit_id, :choices=>@current_company.units.find(:all, :order=>:name).collect{|x| [x.label, x.id]}
+  -f.error :stock_move
+  -f.title :description
+  -f.field :stock_move, :name
+  -f.field :stock_move, :comment, :field=>:textarea
+  -f.title :nature
+  -f.field :stock_move, :virtual
+  -f.field :stock_move, :input
+  -f.field :stock_move, :location_id, :choices=>{:reflection=>:locations}
+  -f.field :stock_move, :planned_on
+  -f.field :stock_move, :moved_on
+  -f.field :stock_move, :product_id, :choices=>{:reflection=>products}, :new=>{:action=>:product_create}
+  -f.field :stock_move, :quantity
+  -#f.field :stock_move, :unit_id, :choices=>{:reflection=>:units}
 
