--- a/app/views/management/_subscription_form.html.haml
+++ b/app/views/management/_subscription_form.html.haml
@@ -1,13 +1,14 @@
+-subscription_nature_id = nil
 =formalize do |f|
   -f.error 'subscription'
   -f.field :subscription, :entity_id, :choices=>:entities
   -f.field :subscription, :contact_id, :choices=>:subscription_contacts
   -#f.field :subscription, :invoice_id
   -#f.field :subscription, :sale_order_id
-  -f.field :subscription, :nature_id, :choices=>@current_company.subscription_natures.collect{|x| [x.name, x.id]}
+  -subscription_nature_id = f.field :subscription, :nature_id, :choices=>{:reflection=>:subscription_natures}, :new=>{:action=>:subscription_nature_create}
   -f.field :subscription, :quantity
   -f.field :subscription, :suspended
   -f.field :subscription, :comment, :field=>:textarea
 #period=render :partial=>'subscriptions_period_form'
-=observe_field(:subscription_nature_id, :url=>{:action=>:subscriptions_period}, :update=>:period, :frequency => 0.25, :with=>"subscription_nature_id", :loading=>"onLoading()", :loaded=>"onLoaded()")
+=observe_field(subscription_nature_id, :url=>{:action=>:subscriptions_period}, :update=>:period, :frequency => 0.25, :with=>"subscription_nature_id", :loading=>"onLoading()", :loaded=>"onLoaded()")
 
