--- a/app/views/management/inventory_create.html.haml
+++ b/app/views/management/inventory_create.html.haml
@@ -1,7 +1,7 @@
 -form_tag() do
   =formalize do |f|
     - f.title :inventory
-    - f.field :inventory, :responsible_id, :choices=>@current_company.users.collect{|e| [e.label, e.id]}
+    - f.field :inventory, :responsible_id, :choices=>{:reflection=>:users}
     - f.field :inventory, :comment, :field=>:textarea
   =dyta :inventory_lines_create
   .actions
