--- a/app/views/management/transport_create.html.haml
+++ b/app/views/management/transport_create.html.haml
@@ -2,8 +2,8 @@
   =formalize do |f|
     -f.error :transport
     -f.title :info
-    -f.field :transport, :transporter_id, :choices=>@current_company.entities.find_all_by_active_and_transporter(true,true).collect{|t| [t.full_name,t.id]}, :new=>{:controller=>:relations, :action=>:entity_create}
-    -f.field :transport, :responsible_id, :choices=>@current_company.employees.find(:all, :order=>:last_name).collect{|x| [x.full_name, x.id]}, :options=>{:include_blank=>"-- Aucun --"}, :new=>{:controller=>:resources, :action=>:employee_create}
+    -f.field :transport, :transporter_id, :choices=>{:reflection=>:transporters}, :new=>{:controller=>:relations, :action=>:entity_create, :transporter=>1}
+    -f.field :transport, :responsible_id, :choices=>{:reflection=>:employees, :include_blank=>"-- Aucun --"}, :new=>{:controller=>:company, :action=>:user_create, :employed=>1}
     -f.field :transport, :transport_on
     -f.field :transport, :comment, :field=>:textarea
   .actions
