--- a/app/views/resources/_employee_form.html.haml
+++ b/app/views/resources/_employee_form.html.haml
@@ -1,7 +1,7 @@
 =formalize do |f|
   - unless defined? create_user 
     - f.error :user
-  - f.title t('general.employee')
+  - f.title User.human_attribute_name("employed")
   - f.field :user, :employment
   - unless defined? create_user 
     - f.field :user, :first_name
