--- a/app/views/shared/form_create.html.haml
+++ b/app/views/shared/form_create.html.haml
@@ -1,15 +1,19 @@
 -form_id = @options[:id]||"f"+rand.to_s[2..-1]
 -if params[:dialog]
   -jsaction = params[:formalize] ? Marshal.load(ActiveSupport::Base64.decode64(params[:formalize])) : nil
-  -form_remote_tag(:url=>{:dialog=>params[:dialog], :formalize=>params[:formalize]}, 250=>"#{jsaction}; closeDialog('#{params[:dialog]}')", 200=>"$('#{params[:dialog]}').innerHTML=request.responseText", :html=>{:id=>form_id}, :loaded=>"resizeDialog('#{params[:dialog]}')") do
-    .fields=render :partial=>@partial
-    .actions
+  -form_remote_tag(:url=>{:dialog=>params[:dialog], :formalize=>params[:formalize]}, 250=>"#{jsaction}; closeDialog('#{params[:dialog]}')", 200=>"$('#{params[:dialog]}').update(request.responseText).resize();", :html=>{:id=>form_id, :flex=>1, :orient=>:vertical, :style=>'overflow:none'}, :loaded=>"resizeDialog('#{params[:dialog]}')") do
+    .fields{:flex=>10, :style=>"overflow: auto"}
+      =render :partial=>@partial
+      .end
+    .actions{:style=>"margin: 0"}
       =submit_tag(tg(@options[:submit]||:create))
       =link_to_function(tg(@options[:cancel]||:cancel), "closeDialog('#{params[:dialog]}')")
 -else
-  -form_tag(nil, {:id=>form_id}) do
-    .fields=render :partial=>@partial
-    .actions
+  -form_tag(nil, {:id=>form_id, :flex=>1, :orient=>:vertical, :style=>'overflow:none'}) do
+    .fields{:flex=>10, :style=>"overflow: auto"}
+      =render :partial=>@partial
+      .end
+    .actions{:style=>"margin: 0"}
       =submit_tag(tg(@options[:submit]||:create))
       =link_to_back :label=>@options[:cancel]||:cancel
 
