--- a/public/themes/tekyla/stylesheets/screen.css
+++ b/public/themes/tekyla/stylesheets/screen.css
@@ -19,12 +19,14 @@ table#master > tbody > tr > td > .column { height: 300px; overflow: auto; }
 #overlay.loading { background: black url(../images/ajax-loader-4.gif) center center no-repeat; }
 
 /*.dialog { background: black; }*/
-.dialog .main { border: 4px solid #95b0e4; -moz-border-radius: 8px;}
+/*.dialog .main { border: 4px solid #95b0e4; -moz-border-radius: 8px;}*/
+.dialog .main { border: 8px solid #95b0e4; -moz-border-radius: 12px;}
 .dialog .main .page { -moz-border-radius: 4px;}
+.fields { background: url(../images/shadow-top.png) repeat-x bottom; }
 
-.main { overflow: auto; border-top: 1px solid #95b0e4; background: #C9D7F1; padding-bottom: 8px;}
-
-.page { overflow: auto; border-right:8px solid #C9D7F1; border-left:8px solid #C9D7F1; }
+.end { height: 8px;}
+.main { overflow: visible; border-top: 1px solid #95b0e4; background: #C9D7F1; padding-bottom: 8px;}
+.page { overflow: visible; border-right:8px solid #C9D7F1; border-left:8px solid #C9D7F1; }
 /*#legals { margin:0; padding:4px 8px; height: 0px; background: #C9D7F1; font-size:13px; color: #047; text-align: center; }*/
 
 .nav { height: 32px; }
@@ -83,7 +85,8 @@ table#master > tbody > tr > td > .column { height: 300px; overflow: auto; }
 
 
 /*#yield { padding: 8px; overflow: auto; background: url(../images/columns.png) repeat-x top; border: 1px solid #95b0e4; }*/
-.yield { padding: 8px; overflow: auto; background: #F7F7FF; border: 1px solid #95b0e4; }
+.yield { padding: 8px; overflow: auto; }
+.yield {   background: #F7F7FF; border: 1px solid #95b0e4; }
 .yield h1 { margin: 0px 0px 8px; font-size:20px; color: #047; font-weight: normal;}
 .yield h2 { margin: 16px 0px 4px; font-size:15px; color: #047; }
 .yield .menu { -moz-border-radius: 8px; background: #DBE4F6; padding:4px 6px; margin: 0 0 8px;}
@@ -199,8 +202,8 @@ table.formalize a.fastadd { margin: 0px 8px; }
 .day_field, .month_field, .hour_field, .minute_field, .second_field { width: 2.5ex; }
 .year_field { width: 4.5ex; }
 
-/*.actions { text-align:center; padding:4px !important; background: #CEC; margin: 8px 0 0; }*/
-.actions { text-align:center; padding:4px !important; background: url(../images/actions.png) repeat-y bottom; margin: 8px 0 0; }
+.actions { text-align:center; padding:4px !important; background: #CEC; border-top: 1px solid #ACA; margin: 8px 0 0; }
+/*.actions { text-align:center; padding:4px !important; background: #EFD url(../images/actions.png) repeat-y bottom; margin: 8px 0 0; }*/
 .actions * { margin: 0px 8px; }
 .actions a { padding: 4px; margin: 4px;}
 .actions a:link, .actions a:visited, .actions a:hover { color:#080;}
